// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`app schemas > matches the schema Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

@AppEntity(schema: .audio.ambientSound)
struct IntentLaneSoundEntity: AppEntity {
  static let defaultQuery = IntentLaneSoundQuery()

  var id: String
  var title: String
  init(id: String, title: String) {
    self.id = id
    self.title = title
  }

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: title)
    )
  }
}

protocol IntentLaneSoundResolver: Sendable {
  func soundEntities(for identifiers: [String]) async throws -> [IntentLaneSoundEntity]
  func suggestedSoundEntities() async throws -> [IntentLaneSoundEntity]
}

struct IntentLaneSoundQuery: EntityQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLaneSoundEntity] {
    guard let resolver = await IntentLaneEntityResolvers.sound else { return [] }
    return try await resolver.soundEntities(for: identifiers)
  }

  func suggestedEntities() async throws -> [IntentLaneSoundEntity] {
    guard let resolver = await IntentLaneEntityResolvers.sound else { return [] }
    return try await resolver.suggestedSoundEntities()
  }
}

@MainActor
enum IntentLaneEntityResolvers {
  static var sound: (any IntentLaneSoundResolver)?
}

@AppIntent(schema: .camera.stopCapture)
struct StopCapture: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Stop capture", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "studio", path: "/stop", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Stop capture", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Stop capture", table: "IntentLane"), fields: [])
    )
  }
}
"
`;

exports[`entities > matches the entity Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct IntentLaneIdeaEntity: AppEntity {
  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("Idea", table: "IntentLane"))
  }

  static let defaultQuery = IntentLaneIdeaQuery()

  let id: String
  let title: String
  let status: String?

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: title),
      subtitle: status.map { LocalizedStringResource(stringLiteral: $0) }
    )
  }
}

protocol IntentLaneIdeaResolver: Sendable {
  func ideaEntities(for identifiers: [String]) async throws -> [IntentLaneIdeaEntity]
  func suggestedIdeaEntities() async throws -> [IntentLaneIdeaEntity]
}

struct IntentLaneIdeaQuery: EntityQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLaneIdeaEntity] {
    guard let resolver = await IntentLaneEntityResolvers.idea else { return [] }
    return try await resolver.ideaEntities(for: identifiers)
  }

  func suggestedEntities() async throws -> [IntentLaneIdeaEntity] {
    guard let resolver = await IntentLaneEntityResolvers.idea else { return [] }
    return try await resolver.suggestedIdeaEntities()
  }
}

struct IntentLaneTagEntity: AppEntity {
  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("Tag", table: "IntentLane"))
  }

  static let defaultQuery = IntentLaneTagQuery()

  let id: String
  let name: String

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: name)
    )
  }
}

protocol IntentLaneTagResolver: Sendable {
  func tagEntities(for identifiers: [String]) async throws -> [IntentLaneTagEntity]
  func suggestedTagEntities() async throws -> [IntentLaneTagEntity]
}

struct IntentLaneTagQuery: EntityQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLaneTagEntity] {
    guard let resolver = await IntentLaneEntityResolvers.tag else { return [] }
    return try await resolver.tagEntities(for: identifiers)
  }

  func suggestedEntities() async throws -> [IntentLaneTagEntity] {
    guard let resolver = await IntentLaneEntityResolvers.tag else { return [] }
    return try await resolver.suggestedTagEntities()
  }
}

@MainActor
enum IntentLaneEntityResolvers {
  static var idea: (any IntentLaneIdeaResolver)?
  static var tag: (any IntentLaneTagResolver)?
}

struct OpenIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Open an idea", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("idea", table: "IntentLane"))
  var idea: IntentLaneIdeaEntity

  @Parameter(title: LocalizedStringResource("tag", table: "IntentLane"))
  var tag: IntentLaneTagEntity

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas", query: ["idea": idea.id])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Open an idea", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Open an idea", table: "IntentLane"), fields: [(LocalizedStringResource("idea", table: "IntentLane"), idea.id), (LocalizedStringResource("tag", table: "IntentLane"), tag.id)])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: OpenIdea(), phrases: [
        "Open an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Open an idea", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;

exports[`generateSwift > matches the multi-intent Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")
  static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("title", table: "IntentLane"), title)])
    )
  }
}

struct OpenInbox: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Open the inbox", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/inbox", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Open the inbox", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Open the inbox", table: "IntentLane"), fields: [])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
      AppShortcut(intent: OpenInbox(), phrases: [
        "Open the inbox in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Open the inbox", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;

exports[`generateSwift > matches the reference Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")
  static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("title", table: "IntentLane"), title)])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;

exports[`localized parameters > matches the localized parameter Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

enum IntentLaneCreateIdeaPriority: String, AppEnum {
  case low

  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("Priority", table: "IntentLane"))
  }

  static var caseDisplayRepresentations: [IntentLaneCreateIdeaPriority: DisplayRepresentation] {
    [
    .low: DisplayRepresentation(title: LocalizedStringResource("Low", table: "IntentLane"))
    ]
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("Idea title", table: "IntentLane"), requestValueDialog: IntentDialog(LocalizedStringResource("What is the idea?", table: "IntentLane")))
  var title: String

  @Parameter(title: LocalizedStringResource("effort", table: "IntentLane"), requestValueDialog: IntentDialog(LocalizedStringResource("How much effort?", table: "IntentLane")))
  var effort: Int

  @Parameter(title: LocalizedStringResource("Priority", table: "IntentLane"))
  var priority: IntentLaneCreateIdeaPriority

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Create an idea", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("Idea title", table: "IntentLane"), title), (LocalizedStringResource("effort", table: "IntentLane"), String(effort)), (LocalizedStringResource("Priority", table: "IntentLane"), priority.rawValue)])
    )
  }
}
"
`;

exports[`native execution > matches the native Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct IntentLaneNoteEntity: AppEntity {
  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("Note", table: "IntentLane"))
  }

  static let defaultQuery = IntentLaneNoteQuery()

  let id: String
  let title: String
  let status: String?

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: title),
      subtitle: status.map { LocalizedStringResource(stringLiteral: $0) }
    )
  }
}

protocol IntentLaneNoteResolver: Sendable {
  func noteEntities(for identifiers: [String]) async throws -> [IntentLaneNoteEntity]
  func suggestedNoteEntities() async throws -> [IntentLaneNoteEntity]
}

struct IntentLaneNoteQuery: EntityQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLaneNoteEntity] {
    guard let resolver = await IntentLaneEntityResolvers.note else { return [] }
    return try await resolver.noteEntities(for: identifiers)
  }

  func suggestedEntities() async throws -> [IntentLaneNoteEntity] {
    guard let resolver = await IntentLaneEntityResolvers.note else { return [] }
    return try await resolver.suggestedNoteEntities()
  }
}

@MainActor
enum IntentLaneEntityResolvers {
  static var note: (any IntentLaneNoteResolver)?
}

protocol ArchiveNoteHandler: Sendable {
  func perform(note: IntentLaneNoteEntity) async throws
}

protocol CreateNoteHandler: Sendable {
  func perform(title: String, pinned: Bool) async throws -> IntentLaneNoteEntity
}

enum IntentLaneHandlerError: Error {
  case missingHandler(String)
}

@MainActor
enum IntentLaneIntentHandlers {
  static var archive_note: (any ArchiveNoteHandler)?
  static var create_note: (any CreateNoteHandler)?
}

struct ArchiveNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Archive a note", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("note", table: "IntentLane"))
  var note: IntentLaneNoteEntity

  func perform() async throws -> some IntentResult & ProvidesDialog {
    guard let handler = await IntentLaneIntentHandlers.archive_note else {
      throw IntentLaneHandlerError.missingHandler("archive_note")
    }
    try await handler.perform(note: note)
    return .result(dialog: IntentDialog(LocalizedStringResource("Note archived", table: "IntentLane")))
  }
}

struct CreateNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create a note", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("Note title", table: "IntentLane"))
  var title: String

  @Parameter(title: LocalizedStringResource("pinned", table: "IntentLane"))
  var pinned: Bool

  func perform() async throws -> some IntentResult & ProvidesDialog & ReturnsValue<IntentLaneNoteEntity> {
    guard let handler = await IntentLaneIntentHandlers.create_note else {
      throw IntentLaneHandlerError.missingHandler("create_note")
    }
    let value = try await handler.perform(title: title, pinned: pinned)
    return .result(value: value, dialog: IntentDialog(LocalizedStringResource("Note created", table: "IntentLane")))
  }
}
"
`;

exports[`risk policy > matches the risk Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct ArchiveNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Archive a note", table: "IntentLane")
  static let authenticationPolicy: IntentAuthenticationPolicy = .requiresAuthentication



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    try await requestConfirmation(actionName: .continue, dialog: IntentDialog(LocalizedStringResource("Archive a note", table: "IntentLane")))
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/archive", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("The note is archived", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Archive a note", table: "IntentLane"), fields: [])
    )
  }
}

struct CreateNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create a note", table: "IntentLane")
  static let authenticationPolicy: IntentAuthenticationPolicy = .alwaysAllowed



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/new", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Create a note", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create a note", table: "IntentLane"), fields: [])
    )
  }
}

struct DeleteNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Delete a note", table: "IntentLane")
  static let authenticationPolicy: IntentAuthenticationPolicy = .requiresAuthentication



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    try await requestConfirmation(actionName: .continue, dialog: IntentDialog(LocalizedStringResource("Delete this note?", table: "IntentLane")))
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/delete", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("The note is deleted", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Delete a note", table: "IntentLane"), fields: [])
    )
  }
}

struct ReadNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Read a note", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/read", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Read a note", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Read a note", table: "IntentLane"), fields: [])
    )
  }
}
"
`;

exports[`typed parameters > matches the typed Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

enum IntentLaneCreateIdeaPriority: String, AppEnum {
  case high
  case low

  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("priority", table: "IntentLane"))
  }

  static var caseDisplayRepresentations: [IntentLaneCreateIdeaPriority: DisplayRepresentation] {
    [
    .high: DisplayRepresentation(title: LocalizedStringResource("High", table: "IntentLane")),
    .low: DisplayRepresentation(title: LocalizedStringResource("Low", table: "IntentLane"))
    ]
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  @Parameter(title: LocalizedStringResource("effort", table: "IntentLane"))
  var effort: Int

  @Parameter(title: LocalizedStringResource("ratio", table: "IntentLane"))
  var ratio: Double

  @Parameter(title: LocalizedStringResource("pinned", table: "IntentLane"))
  var pinned: Bool

  @Parameter(title: LocalizedStringResource("due", table: "IntentLane"))
  var due: DateComponents

  @Parameter(title: LocalizedStringResource("at", table: "IntentLane"))
  var at: Date

  @Parameter(title: LocalizedStringResource("priority", table: "IntentLane"))
  var priority: IntentLaneCreateIdeaPriority

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["at": at.ISO8601Format(), "due": String(format: "%04d-%02d-%02d", due.year ?? 0, due.month ?? 0, due.day ?? 0), "effort": String(effort), "pinned": pinned ? "true" : "false", "priority": priority.rawValue, "ratio": String(ratio), "title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("title", table: "IntentLane"), title), (LocalizedStringResource("effort", table: "IntentLane"), String(effort)), (LocalizedStringResource("ratio", table: "IntentLane"), String(ratio)), (LocalizedStringResource("pinned", table: "IntentLane"), pinned ? "true" : "false"), (LocalizedStringResource("due", table: "IntentLane"), String(format: "%04d-%02d-%02d", due.year ?? 0, due.month ?? 0, due.day ?? 0)), (LocalizedStringResource("at", table: "IntentLane"), at.ISO8601Format()), (LocalizedStringResource("priority", table: "IntentLane"), priority.rawValue)])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;
